[package]
name = "gcmodule"
version = "0.1.2"
authors = ["Jun Wu <quark@lihdd.net>"]
edition = "2018"
license = "MIT"
description = "Cyclic garbage collection inspired by CPython's gc implementation."
keywords = ["gc", "garbage", "cycle", "rc"]
repository = "https://github.com/quark-zju/gcmodule"
categories = ["memory-management"]
readme = "README.md"

[dev-dependencies]
quickcheck = "0.9"

[features]
nightly = []
testutil = []
