[package]
name = "gcmodule"
version = "0.2.3"
authors = ["Jun Wu <quark@lihdd.net>"]
edition = "2018"
license = "MIT"
description = "Cyclic garbage collection inspired by CPython's gc implementation."
keywords = ["gc", "garbage", "cycle", "rc"]
repository = "https://github.com/quark-zju/gcmodule"
categories = ["memory-management"]
readme = "README.md"

[dev-dependencies]
quickcheck = { version = "0.9", default-features = false }

[dependencies]
gcmodule_derive = { version = "=0.2.3", optional = true, path = "gcmodule_derive" }
parking_lot = "0.10"

[features]
default = ["derive", "sync"]
derive = ["gcmodule_derive"]
nightly = []
sync = []
testutil = []

[workspace]
members = [
  "gcmodule_derive",
]
