[package]
name = "gcmodule"
version = "0.3.2"
authors = ["Jun Wu <quark@lihdd.net>"]
edition = "2018"
license = "MIT"
description = "Cyclic garbage collection inspired by CPython's gc implementation."
keywords = ["gc", "garbage", "cycle", "rc"]
repository = "https://github.com/quark-zju/gcmodule"
categories = ["memory-management"]
readme = "README.md"

[dev-dependencies]
quickcheck = { version = "0.9", default-features = false }

[dependencies]
gcmodule_derive = { version = "=0.3.2", optional = true, path = "gcmodule_derive" }
parking_lot = { version = "0.10", optional = true }

[features]
default = ["derive", "sync"]
debug = []
derive = ["gcmodule_derive"]
nightly = []
sync = ["parking_lot"]
testutil = []

[workspace]
members = [
  "gcmodule_derive",
]
