[package]
name = "gcmodule_derive"
version = "0.3.3"
authors = ["Jun Wu <quark@lihdd.net>"]
edition = "2018"
license = "MIT"
description = "Generate code to implement Trace trait on structures."
repository = "https://github.com/quark-zju/gcmodule"

[lib]
proc-macro = true

[dependencies]
quote = "1"
syn = { version = "1", features = ["derive"] }
proc-macro2 = "1.0.32"
synstructure = "0.12"

[dev-dependencies]
gcmodule = { path = ".." }
